fix double scroll bar

--- a/assets/menu_2.css
+++ b/assets/menu_2.css
@@ -8,6 +8,8 @@
 
 #layout_content{
 	padding:0px !important;
+	/*for double scroll bar*/
+	overflow: hidden;
 }
 #layout_container{
 	padding:0px !important;
